syntax="proto3";
package eos.console;

import "Acl.proto";
import "Ns.proto";
import "Drain.proto";
import "Find.proto";
import "Fs.proto";
import "Rm.proto";
import "StagerRm.proto";
import "Route.proto";
import "Group.proto";

//------------------------------------------------------------------------------
// Request message sent to the server
//------------------------------------------------------------------------------
message RequestProto {
  // Types of output format supported
  enum FormatType {
    DEFAULT = 0;
    JSON    = 1;
    HTTP    = 2;
    FUSE    = 3;
  }

  FormatType format = 1;

  // Actual request data object
  oneof command {
    AclProto acl           = 2;
    NsProto ns             = 3;
    DrainProto drain       = 4;
    FindProto find         = 5;
    FsProto fs             = 6;
    RmProto rm             = 7;
    StagerRmProto stagerRm = 8;
    RouteProto route       = 9;
    GroupProto group       = 10;
  }

  string Comment = 30;
}
